<resources>
    <string name="app_name">Reloj</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textobtniniciar">Iniciar</string>
    <string name="minutos">Minutos</string>
    <string name="textoInicialMin">0</string>
    <string name="tiempoInicial">00:00</string>
    <string name="segundos">Segundos</string>
    <string name="ceroSegundos">0</string>
    <string name="paiscolombia">Colombia</string>
    <string name="parar">Parar</string>
    <string-array name="hora">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>
